// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AOAutocomplete correctly with all props 1`] = `
<span>
  <span>
    <div
      style={
        Object {
          "background": "white",
        }
      }
      wrapperProp="wrapperProp"
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="ao-textbox some-width-class   "
        extraProp="extraProp"
        id="test"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="placeholder"
        role="combobox"
        value=""
      />
    </div>
  </span>
</span>
`;

exports[`renders AOAutocomplete correctly with defaults 1`] = `
<span>
  <span>
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="ao-textbox ao-width-M   "
        id="test"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        role="combobox"
        value=""
      />
    </div>
  </span>
</span>
`;

exports[`renders AOAutocomplete correctly with open as false 1`] = `
<span>
  <span>
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        aria-autocomplete="list"
        aria-expanded={false}
        autoComplete="off"
        className="ao-textbox ao-width-M   "
        id="test"
        name="test"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        role="combobox"
        value=""
      />
    </div>
  </span>
</span>
`;
